<resources>
    <string name="app_name">Calories Calc</string>
    <string name="action_settings">Settings</string>
    <string name="weight">Weight in kg.</string>
    <string name="gender">Gender: Male=1 or Female=2</string>
    <string name="Age">Age in years</string>
    <string name="height">Height in sm.</string>
    <string name="activity">1-5 style of life 1-not active</string>
    <string name="firstname">FirstName</string>
    <string name="secondname">SecondName</string>
    <string name="date">Date</string>
    <string name="email">Email</string>
    <string name="insert">Ins</string>
    <string name="Query">Que</string>
    <string name="update">Upd</string>
    <string name="query">Que</string>
    <string name="delete">Del</string>
    <string name="title_activity_calorie_db">CalorieDBActivity</string>
    <string name="date1">Date</string>
    <string name="water">Water</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="title_activity_result_basic">ResultBasicActivity</string>
    <string name="title_activity_calorie_nav_drawer">Calorie calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
