<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/layer"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDate"
        android:hint="@string/date"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCaloriesPlus"
        android:hint="Calories plus - from food per day"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_below="@+id/etDate"
        android:inputType="numberDecimal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCaloriesMinus"
        android:hint="Calories minus - from phisical activity"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_below="@+id/etCaloriesPlus"
        android:inputType="numberDecimal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etQuantityWater"
        android:hint="Quantity water per day in ml."
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_below="@+id/etCaloriesMinus"
        android:inputType="numberDecimal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etWeightFood"
        android:hint="Weight food per day in gr."
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_below="@+id/etQuantityWater"
        android:inputType="numberDecimal"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etGender"
        android:hint="@string/gender"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_below="@+id/etWeightFood"
        android:inputType="number"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etWeight"
        android:hint="@string/weight"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_below="@+id/etGender"
        android:layout_centerHorizontal="true"
        android:inputType="numberDecimal"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAge"
        android:layout_below="@+id/etWeight"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:hint="@string/Age"
        android:inputType="numberDecimal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etHeight"
        android:hint="@string/height"
        android:layout_below="@+id/etAge"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_centerHorizontal="true"
        android:inputType="numberDecimal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etActivity"
        android:layout_below="@+id/etHeight"
        android:layout_centerHorizontal="true"
        android:hint="@string/activity"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:inputType="number"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HarOld: "
        android:id="@+id/tvHarBenCarOld"
        android:layout_below="@+id/etActivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ResHarOld"
        android:id="@+id/tvResultHarBenCarOld"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_alignTop="@+id/tvHarBenCarOld"
        android:layout_toRightOf="@+id/tvHarBenCarOld"
        android:layout_toEndOf="@+id/tvHarBenCarOld" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" HarNew: "
        android:id="@+id/tvHarBenCarNew"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_toRightOf="@+id/tvResultHarBenCarOld"
        android:layout_below="@+id/etActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ResHarNew"
        android:id="@+id/tvResultHarBenCarNew"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_toRightOf="@+id/tvHarBenCarNew"
        android:layout_below="@+id/etActivity"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Miffilin: "
        android:id="@+id/tvMif"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_toRightOf="@+id/tvResultHarBenCarNew"
        android:layout_below="@+id/etActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" ResMif: "
        android:id="@+id/tvResultMif"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_toRightOf="@+id/tvMif"
        android:layout_below="@+id/etActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Avr: "
        android:id="@+id/tvAvg"
        android:layout_below="@+id/tvHarBenCarOld"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ResAvg "
        android:id="@+id/tvResAvr"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_below="@+id/tvHarBenCarOld"
        android:layout_toRightOf="@+id/tvAvg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Min: "
        android:id="@+id/tvMin"
        android:layout_below="@+id/tvHarBenCarOld"
        android:layout_toRightOf="@+id/tvResAvr"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ResMin: "
        android:id="@+id/tvResMin"
        android:layout_below="@+id/tvHarBenCarOld"
        android:layout_toRightOf="@+id/tvMin"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Max: "
        android:id="@+id/tvMax"
        android:layout_below="@+id/tvHarBenCarOld"
        android:layout_toRightOf="@+id/tvResMin"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" ResMax: "
        android:id="@+id/tvResMax"
        android:layout_below="@+id/tvHarBenCarOld"
        android:layout_toRightOf="@+id/tvMax"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BMI: "
        android:id="@+id/tvBmi"
        android:layout_below="@+id/tvAvg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="casual"
        android:textStyle="bold|italic"
        android:textSize="@dimen/textSize"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Result:"
        android:id="@+id/tvResultBmi"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        android:layout_alignTop="@+id/tvBmi"
        android:layout_toRightOf="@+id/tvBmi"
        android:layout_toEndOf="@+id/tvBmi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ResDesBmi:"
        android:id="@+id/tvResult1Bmi"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:layout_alignTop="@+id/tvResultBmi"
        android:layout_toRightOf="@+id/tvResultBmi"
        />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text=" Calories Per Day: "
          android:id="@+id/tvRecomend"
          android:layout_below="@+id/tvMin"
          android:layout_toRightOf="@+id/tvResult1Bmi"
          android:fontFamily="casual"
          android:textStyle="bold|italic"
          android:textSize="@dimen/textSize"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text=" Result "
          android:id="@+id/tvResRecomend"
          android:fontFamily="casual"
          android:textSize="@dimen/textSize"
          android:textStyle="bold"
          android:layout_below="@+id/tvMin"
          android:layout_toRightOf="@+id/tvRecomend"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" For consideration Calories Per Day: "
        android:id="@+id/tvRecomendExtra"
        android:layout_below="@+id/tvBmi"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="casual"
        android:textStyle="bold|italic"
        android:textSize="@dimen/textSize"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Result "
        android:id="@+id/tvResRecomendExtra"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        android:layout_below="@+id/tvBmi"
        android:layout_toRightOf="@+id/tvRecomendExtra"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvResRecomendExtra"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert"
            android:id="@+id/btnInsert"
            android:onClick="Insert"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query"
            android:id="@+id/btnQuery"
            android:onClick="Query"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/btnUpd"
            android:onClick="update"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/btnDelete"
            android:onClick="Delete"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Act"
            android:id="@+id/btnChange"
            android:onClick="NewActivity"
            android:layout_weight="1"
            />

        <ImageButton
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:id="@+id/imgButton"
           android:onClick="Calculate"
           android:layout_alignParentBottom="true"
           android:layout_alignParentRight="true"
           android:layout_alignParentEnd="true"
           android:background="@color/colorAdditional"
           android:src="@drawable/ic_directions_run_50dp"
           android:layout_weight="1"
        />
     </LinearLayout>
</RelativeLayout>
