<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.CaloriesDetailsBasicActivity"
    tools:showIn="@layout/activity_calories_details_basic">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date: "
        android:id="@+id/tvDate"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etDate"
        android:hint="@string/date"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:layout_toRightOf="@+id/tvDate"
        android:layout_toEndOf="@+id/tvDate" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCalPlus"
        android:fontFamily="casual"
        android:text="Calorie+: "
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:layout_below="@+id/tvDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etCaloriesPlus"
        android:hint="Calories+:"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:inputType="numberDecimal"
        android:layout_below="@+id/tvDate"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_toEndOf="@+id/tvCalPlus"
        android:layout_toRightOf="@+id/tvCalPlus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCalorieMin"
        android:fontFamily="casual"
        android:text="Calorie-: "
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:layout_below="@+id/tvCalPlus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etCaloriesMinus"
        android:hint="Calories-"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:inputType="numberDecimal"
        android:layout_below="@+id/etCaloriesPlus"
        android:layout_alignRight="@+id/etCaloriesPlus"
        android:layout_alignEnd="@+id/etCaloriesPlus"
        android:layout_toEndOf="@+id/tvCalPlus"
        android:layout_toRightOf="@+id/tvCalPlus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:fontFamily="casual"
        android:text="Water in ml.: "
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:layout_alignTop="@+id/etQuantityWater"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etQuantityWater"
        android:hint="Quantity water in ml."
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:inputType="numberDecimal"
        android:layout_below="@+id/etCaloriesMinus"
        android:layout_alignRight="@+id/etCaloriesMinus"
        android:layout_alignEnd="@+id/etCaloriesMinus"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight food: "
        android:id="@+id/tvWeightF"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etWeightFood"
        android:hint="Weight food"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:inputType="numberDecimal"
        android:layout_below="@+id/etQuantityWater"
        android:layout_alignRight="@+id/etQuantityWater"
        android:layout_alignEnd="@+id/etQuantityWater"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender 1-M 2-F:"
        android:id="@+id/tvGender"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:layout_below="@+id/tvWeightF"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etGender"
        android:hint="Gender: 1-M 2=F: "
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:inputType="number"
        android:layout_below="@+id/etWeightFood"
        android:layout_alignRight="@+id/etWeightFood"
        android:layout_alignEnd="@+id/etWeightFood"
        android:layout_toRightOf="@+id/tvGender"
        android:layout_toEndOf="@+id/tvGender" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight: "
        android:id="@+id/tvWeight"
        android:layout_below="@+id/tvGender"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etWeight"
        android:hint="@string/weight"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:inputType="numberDecimal"
        android:layout_below="@+id/etGender"
        android:layout_alignRight="@+id/etGender"
        android:layout_alignEnd="@+id/etGender"
        android:layout_alignLeft="@+id/etCaloriesPlus"
        android:layout_alignStart="@+id/etCaloriesPlus" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Age:"
        android:id="@+id/tvAge"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:layout_below="@+id/tvWeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etAge"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:hint="@string/Age"
        android:inputType="numberDecimal"
        android:layout_below="@+id/etWeight"
        android:layout_alignRight="@+id/etWeight"
        android:layout_alignEnd="@+id/etWeight"
        android:layout_toRightOf="@+id/tvDate"
        android:layout_toEndOf="@+id/tvDate" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Height: "
        android:id="@+id/tvHeight"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:layout_below="@+id/tvAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etHeight"
        android:hint="@string/height"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:inputType="numberDecimal"
        android:layout_below="@+id/etAge"
        android:layout_alignRight="@+id/etAge"
        android:layout_alignEnd="@+id/etAge"
        android:layout_toEndOf="@+id/tvHeight"
        android:layout_toRightOf="@+id/tvHeight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Activity: "
        android:id="@+id/tvActivity"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:layout_below="@+id/tvHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etActivity"
        android:hint="1-5 Style of life"
        android:fontFamily="casual"
        android:textSize="@dimen/textSize"
        android:padding="5dp"
        android:inputType="number"
        android:layout_below="@+id/etHeight"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignLeft="@+id/etWeight"
        android:layout_alignStart="@+id/etWeight" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/etActivity"
        android:id="@+id/linearLayout">


     <!--   <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="#08f524"
            android:src="@drawable/ic_reply_24dp"
            android:onClick="back"

            />-->


    <!--    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Back"
            android:onClick="back"
            android:id="@+id/btnBack"
            android:background="#1eec0c"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />-->



        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Calculate"
            android:onClick="Calculate"
            android:id="@+id/btnCalculate"
            android:background="#0bf1ce"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Save"
            android:onClick="save"
            android:id="@+id/btnSaveOrUpdate"
            android:layout_weight="1"
            android:background="#ef0b2d"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />



    </LinearLayout>

  <!--  <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#08f524"
        android:src="@drawable/ic_reply_24dp"
        android:onClick="back"
        app:layout_anchor="@id/app_bar"


        />-->

</RelativeLayout>
